# blog-ai

./: .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: .dockerignore  .env.example  API.md  Dockerfile  alembic.ini  auth.py  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 0e969687e30b_initial_migration.py  0eff47ac01d4_add_site_settings_table.py  9d4dd6bbfa89_change_comment_user_id_to_nickname_for_.py  a49b87bd7452_增加设置表.py
backend/tests/: conftest.py  test_auth.py  test_posts.py
backend/utils/: time.py
docs/superpowers/plans/: 2026-04-01-frontend-performance-optimization-plan.md  2026-04-02-frontend-accessibility-optimization-plan.md  2026-04-02-frontend-seo-optimization-plan.md
docs/superpowers/specs/: 2026-04-01-frontend-performance-optimization-design.md  2026-04-02-frontend-accessibility-optimization-design.md  2026-04-02-frontend-seo-optimization-design.md
frontend/: .dockerignore  .env.example  Dockerfile  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/src/: App.vue  main.ts  vitest.setup.ts
frontend/src/api/: index.ts
frontend/src/components/: ArticleSidebar.vue  CommentSection.vue  HandDrawnBackground.vue  HandDrawnBorder.vue  HandDrawnCard.vue  HandDrawnConfirm.vue  HandDrawnDivider.vue  HandDrawnIcon.vue  PageDecorations.vue  PopularPosts.vue  RelatedPosts.vue  ReplyForm.vue  SidebarCardTitle.vue  TableOfContents.vue
(+36 files in other folders)
